comments and save reject queue

--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -35,8 +35,10 @@
    },
    "outputs": [],
    "source": [
+    "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "# Read data into dataframe\n",
     "df = pd.read_csv('./google-cluster-data-1.csv',sep=' ')"
    ]
   },
@@ -72,7 +74,8 @@
     }
    ],
    "source": [
-    "print(\"length of df: \", len(df))\n"
+    "# Print the length of the df\n",
+    "print(\"length of df: \", len(df))"
    ]
   },
   {
@@ -118,6 +121,7 @@
     }
    ],
    "source": [
+    "# Show amount of CPU for each task\n",
     "df['NrmlTaskCores'].values"
    ]
   },
@@ -129,9 +133,10 @@
    },
    "outputs": [],
    "source": [
+    "# Save CPU amount, memory requirements, and task IDs\n",
     "cpus = df['NrmlTaskCores'].values\n",
     "mems = df['NrmlTaskMem'].values\n",
-    "task_ids = df['TaskID'].values\n"
+    "task_ids = df['TaskID'].values"
    ]
   },
   {
@@ -140,6 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate and save execution times for two cases: mod 2 and mod 10\n",
     "temp1 = df['TaskID'].values\n",
     "ExecutionTime1 = []\n",
     "for i in temp1:\n",
@@ -168,6 +174,7 @@
     }
    ],
    "source": [
+    "# Calculate and print total # of subtasks for two cases: mod 2 and mod 10\n",
     "totalSubtask1 = 0\n",
     "for i in ExecutionTime1:\n",
     "    totalSubtask1 += i/300\n",
@@ -292,6 +299,7 @@
     }
    ],
    "source": [
+    "# Show dataframe\n",
     "df.head()"
    ]
   },
@@ -301,6 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save calculated execution times to columns in the dataframe\n",
     "df['executionTime1'] = ExecutionTime1\n",
     "df['executionTime2'] = ExecutionTime2"
    ]
@@ -318,6 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculates energy consumption for one vm\n",
     "def getEnergyConsumption(VMCPUUsage, totalCPUCount, threshold):\n",
     "    \n",
     "    #here we want to calculate the cpu usage rate per individual VM so i look at the individual\n",
@@ -345,6 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculates cost for one vm\n",
     "def getCost(time, power):\n",
     "    costChart = [0.5, 0.5, 0.6, 0.6, 0.6, 0.7, 0.7, 0.6, 0.6, 0.8, 0.8, 0.8, 0.8]\n",
     "    mapping = [90000,91875,93750,95625,97500,99375,101250,103125,105000,106875,108750,110625]\n",
@@ -367,6 +378,7 @@
    },
    "outputs": [],
    "source": [
+    "# Schedule all tasks in a way that minimizes the power consumption\n",
     "def GreedyPower(input, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
     "    length = len(input)\n",
     "    nextQueue = []\n",
@@ -434,6 +446,7 @@
     }
    ],
    "source": [
+    "# Run greedy for CPU = 7, Mem = 11\n",
     "VMs = [[7, 11] for i in range(100)]\n",
     "setty = set(df['Time'].values)\n",
     "setty = sorted(setty)\n",
@@ -457,7 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"rejected tasks\", rejected)"
+    "print(\"rejected tasks\", rejected)\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_1\", rejected)"
    ]
   },
   {
@@ -482,6 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run greedy for CPU = 25 and Mem = 40\n",
     "VMs = [[25, 40] for i in range(100)]\n",
     "setty = set(df['Time'].values)\n",
     "setty = sorted(setty)\n",
@@ -520,7 +536,8 @@
     }
    ],
    "source": [
-    "len(rejected)"
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_2\", rejected)"
    ]
   },
   {
@@ -581,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
