--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -379,8 +379,8 @@
    "outputs": [],
    "source": [
     "# Schedule all tasks in a way that minimizes the power consumption\n",
-    "def GreedyPower(input, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
-    "    length = len(input)\n",
+    "def GreedyPower(input_data, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
+    "    length = len(input_data)\n",
     "    nextQueue = []\n",
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    energyUsage = 0\n",
@@ -398,7 +398,7 @@
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
-    "                if lowestPower < energy:\n",
+    "                if energy < lowestPower:\n",
     "                    lowestPower = energy\n",
     "                    lowestPowerIndex = VM_id\n",
     "                    \n",
@@ -416,8 +416,54 @@
     "            row[executionTime] -= 300\n",
     "            nextQueue.append(row)\n",
     "            \n",
-    "    return rejected, nextQueue\n",
-    "      \n"
+    "    return rejected, nextQueue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GreedyCost(input_data, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
+    "    length = len(input_data)\n",
+    "    nextQueue = []\n",
+    "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
+    "    cost = 0\n",
+    "    \n",
+    "    for index, row in input.iterrows():\n",
+    "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
+    "        task_id = row['TaskID']\n",
+    "        found_VM = False\n",
+    "        lowestCost = float('inf')\n",
+    "        lowestCostIndex = -1\n",
+    "        VM_id = 0\n",
+    "        \n",
+    "        #iterate through all of the vms\n",
+    "        for j in range(100):\n",
+    "            #check whether this is even schedulable\n",
+    "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
+    "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "                cost = getCost(row['Time'], energy) # time, power arguments go here: FILL IN \n",
+    "                if cost < lowestCost:\n",
+    "                    lowestCost = cost\n",
+    "                    lowestCostIndex = VM_id\n",
+    "                    \n",
+    "        #is schedulable thank the lord\n",
+    "        if lowestCostIndex != -1:\n",
+    "            cpu = VMs[lowestCostIndex][0]\n",
+    "            mem = VMs[lowestCostIndex][1]\n",
+    "            \n",
+    "            VMs[lowestCostIndex][0] = VMs[lowestCostIndex][0] - cpu\n",
+    "            VMs[lowestCostIndex][1] = VMs[lowestCostIndex][1] - mem\n",
+    "        else:\n",
+    "            rejected.append(row['TaskID'])\n",
+    "                \n",
+    "        if row[executionTime] > 300:\n",
+    "            row[executionTime] -= 300\n",
+    "            nextQueue.append(row)\n",
+    "            \n",
+    "    return rejected, nextQueue"
    ]
   },
   {
@@ -446,14 +492,12 @@
     }
    ],
    "source": [
-    "# Run greedy for CPU = 7, Mem = 11\n",
+    "# Run greedy power for CPU = 7, Mem = 11\n",
     "VMs = [[7, 11] for i in range(100)]\n",
     "setty = set(df['Time'].values)\n",
     "setty = sorted(setty)\n",
     "rejected = []\n",
     "nextQueue = []\n",
-    "energyUsage = 0\n",
-    "totalCost = 0\n",
     "print(len(setty))\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
@@ -461,7 +505,12 @@
     "    print(i)\n",
     "    returnObj = GreedyPower(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
-    "    nextQueue = returnObj[1]"
+    "    nextQueue = returnObj[1]\n",
+    "    \n",
+    "print(\"rejected tasks\", rejected)\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_1_i\", rejected)\n",
+    "np.save(\"VMs_1_i\", VMs)"
    ]
   },
   {
@@ -470,18 +519,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run greedy cost for CPU = 7, Mem = 11\n",
+    "VMs = [[7, 11] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "print(len(setty))\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "    print(i)\n",
+    "    returnObj = GreedyCost(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "    \n",
     "print(\"rejected tasks\", rejected)\n",
     "if len(rejected) > 0:\n",
-    "    np.save(\"taskReject_1\", rejected)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save(\"VMs_1\", VMs)"
+    "    np.save(\"taskReject_1_ii\", rejected)\n",
+    "np.save(\"VMs_1_ii\", VMs)"
    ]
   },
   {
@@ -497,47 +553,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run greedy for CPU = 25 and Mem = 40\n",
+    "# Run greedy power for CPU = 25 and Mem = 40\n",
     "VMs = [[25, 40] for i in range(100)]\n",
     "setty = set(df['Time'].values)\n",
     "setty = sorted(setty)\n",
     "rejected = []\n",
     "nextQueue = []\n",
-    "energyUsage2 = 0\n",
-    "totalCost2 = 0\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "   \n",
-    "    returnObj = RR(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
+    "    returnObj = GreedyPower(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
-    "    energyUsage2 += returnObj[2]\n",
-    "    totalCost2 += getCost(i, returnObj[2])\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {
-    "id": "7tfpzpirUxcA"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "\n",
     "if len(rejected) > 0:\n",
-    "    np.save(\"taskReject_2\", rejected)"
+    "    np.save(\"taskReject_2_i\", rejected)\n",
+    "np.save(\"VMs_2_i\", VMs)"
    ]
   },
   {
@@ -565,7 +597,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"VMs_2\", VMs)"
+    "# Run greedy cost for CPU = 25 and Mem = 40\n",
+    "VMs = [[25, 40] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "   \n",
+    "    returnObj = GreedyCost(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_2_ii\", rejected)\n",
+    "np.save(\"VMs_2_ii\", VMs)"
    ]
   },
   {
