--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 3600,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -115,7 +115,7 @@
        "array([0.      , 0.      , 0.021875, ..., 0.      , 0.      , 0.      ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "2LtzET0dSkAg"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "id": "DYaYmjB5TSYp"
    },
@@ -384,8 +384,11 @@
     "    nextQueue = []\n",
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    energyUsage = 0\n",
+    "    totalPower = 0\n",
+    "    totalCost = 0\n",
+    "    totalTurnaroundTime = 0\n",
     "    \n",
-    "    for index, row in input.iterrows():\n",
+    "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
     "        task_id = row['TaskID']\n",
     "        found_VM = False\n",
@@ -395,6 +398,7 @@
     "        \n",
     "        #iterate through all of the vms\n",
     "        for j in range(100):\n",
+    "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
@@ -409,6 +413,11 @@
     "            \n",
     "            VMs[lowestPowerIndex][0] = VMs[lowestPowerIndex][0] - cpu\n",
     "            VMs[lowestPowerIndex][1] = VMs[lowestPowerIndex][1] - mem\n",
+    "            \n",
+    "            # Because we scheduled the task, update power, cost, and time:\n",
+    "            totalPower += lowestPower\n",
+    "            totalCost += getCost(row['Time'], lowestPower)\n",
+    "            totalTurnaroundTime += row[executionTime]\n",
     "        else:\n",
     "            rejected.append(row['TaskID'])\n",
     "                \n",
@@ -416,12 +425,12 @@
     "            row[executionTime] -= 300\n",
     "            nextQueue.append(row)\n",
     "            \n",
-    "    return rejected, nextQueue"
+    "    return rejected, nextQueue, totalPower, totalCost, totalTurnaroundTime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +440,7 @@
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    cost = 0\n",
     "    \n",
-    "    for index, row in input.iterrows():\n",
+    "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
     "        task_id = row['TaskID']\n",
     "        found_VM = False\n",
@@ -441,6 +450,7 @@
     "        \n",
     "        #iterate through all of the vms\n",
     "        for j in range(100):\n",
+    "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
@@ -456,6 +466,11 @@
     "            \n",
     "            VMs[lowestCostIndex][0] = VMs[lowestCostIndex][0] - cpu\n",
     "            VMs[lowestCostIndex][1] = VMs[lowestCostIndex][1] - mem\n",
+    "            \n",
+    "            # Because we scheduled the task, update power, cost, and time:\n",
+    "            totalPower += getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshold)\n",
+    "            totalCost += lowestCost\n",
+    "            totalTurnaroundTime += row[executionTime]\n",
     "        else:\n",
     "            rejected.append(row['TaskID'])\n",
     "                \n",
@@ -463,7 +478,58 @@
     "            row[executionTime] -= 300\n",
     "            nextQueue.append(row)\n",
     "            \n",
-    "    return rejected, nextQueue"
+    "    return rejected, nextQueue, totalPower, totalCost, totalTurnaroundTime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Schedule all tasks in a way that minimizes the turnover time\n",
+    "def GreedyTurnaroundTime(input_data, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
+    "    length = len(input_data)\n",
+    "    nextQueue = []\n",
+    "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
+    "    energyUsage = 0\n",
+    "    \n",
+    "    for index, row in input_data.iterrows():\n",
+    "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
+    "        task_id = row['TaskID']\n",
+    "        found_VM = False\n",
+    "        index = -1\n",
+    "        VM_id = 0\n",
+    "        \n",
+    "        #iterate through all of the vms\n",
+    "        for j in range(100):\n",
+    "            VM_id = j\n",
+    "            #check whether this is even schedulable\n",
+    "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
+    "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "                index = VM_id\n",
+    "                    \n",
+    "        #is schedulable thank the lord\n",
+    "        if index != -1:\n",
+    "            cpu = VMs[index][0]\n",
+    "            mem = VMs[index][1]\n",
+    "            \n",
+    "            VMs[index][0] = VMs[index][0] - cpu\n",
+    "            VMs[index][1] = VMs[index][1] - mem\n",
+    "            \n",
+    "            # Because we scheduled the task, update power, cost, and time:\n",
+    "            power = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshold)\n",
+    "            totalPower += power\n",
+    "            totalCost += getCost(row['Time'], power)\n",
+    "            totalTurnaroundTime += row[executionTime]\n",
+    "        else:\n",
+    "            rejected.append(row['TaskID'])\n",
+    "                \n",
+    "        if row[executionTime] > 300:\n",
+    "            row[executionTime] -= 300\n",
+    "            nextQueue.append(row)\n",
+    "            \n",
+    "    return rejected, nextQueue, totalPower, totalCost, totalTurnaroundTime"
    ]
   },
   {
@@ -487,7 +553,12 @@
       "92400\n",
       "92700\n",
       "93000\n",
-      "93300\n"
+      "93300\n",
+      "93600\n",
+      "93900\n",
+      "94200\n",
+      "94500\n",
+      "94800\n"
      ]
     }
    ],
@@ -499,6 +570,10 @@
     "rejected = []\n",
     "nextQueue = []\n",
     "print(len(setty))\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
@@ -506,11 +581,17 @@
     "    returnObj = GreedyPower(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
     "    \n",
     "print(\"rejected tasks\", rejected)\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_1_i\", rejected)\n",
-    "np.save(\"VMs_1_i\", VMs)"
+    "np.save(\"VMs_1_i\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
    ]
   },
   {
@@ -526,6 +607,10 @@
     "rejected = []\n",
     "nextQueue = []\n",
     "print(len(setty))\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
@@ -533,11 +618,54 @@
     "    returnObj = GreedyCost(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
     "    \n",
     "print(\"rejected tasks\", rejected)\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_1_ii\", rejected)\n",
-    "np.save(\"VMs_1_ii\", VMs)"
+    "np.save(\"VMs_1_ii\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run greedy turnaround time for CPU = 7, Mem = 11\n",
+    "VMs = [[7, 11] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "print(len(setty))\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "    print(i)\n",
+    "    returnObj = GreedyTurnaroundTime(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
+    "    \n",
+    "print(\"rejected tasks\", rejected)\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_1_iii\", rejected)\n",
+    "np.save(\"VMs_1_iii\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
    ]
   },
   {
@@ -549,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,6 +687,10 @@
     "setty = sorted(setty)\n",
     "rejected = []\n",
     "nextQueue = []\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
@@ -566,26 +698,23 @@
     "    returnObj = GreedyPower(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
     "\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_2_i\", rejected)\n",
-    "np.save(\"VMs_2_i\", VMs)"
+    "np.save(\"VMs_2_i\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Energy Used: 6614.281146138474\n",
-      "Cost Incurred: 4736.899788792278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Energy Used:\", energyUsage2)\n",
     "print(\"Cost Incurred:\", totalCost2)"
@@ -593,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,6 +732,10 @@
     "setty = sorted(setty)\n",
     "rejected = []\n",
     "nextQueue = []\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
     "for i in setty:\n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
@@ -610,10 +743,16 @@
     "    returnObj = GreedyCost(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
     "\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_2_ii\", rejected)\n",
-    "np.save(\"VMs_2_ii\", VMs)"
+    "np.save(\"VMs_2_ii\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
    ]
   },
   {
@@ -621,7 +760,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run greedy cost for CPU = 25 and Mem = 40\n",
+    "VMs = [[25, 40] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "   \n",
+    "    returnObj = GreedyTurnaroundTime(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "    totalPower += returnObj[2]\n",
+    "    totalCost += returnObj[3]\n",
+    "    totalCost += returnObj[4]\n",
+    "\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_2_iii\", rejected)\n",
+    "np.save(\"VMs_2_iii\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
+   ]
   }
  ],
  "metadata": {
@@ -646,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
