--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "executionInfo": {
      "elapsed": 3600,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -115,7 +115,7 @@
        "array([0.      , 0.      , 0.021875, ..., 0.      , 0.      , 0.      ])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "id": "2LtzET0dSkAg"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
     "    \n",
     "    #here we want to calculate the cpu usage rate per individual VM so i look at the individual\n",
     "    #cpu usage rate and divide it over 7/100 or 25/100\n",
-    "    cpuUsageRate = VMCPUUsage/(totalCPUCount/100.0)\n",
+    "    cpuUsageRate = (7- VMCPUUsage)/(totalCPUCount)\n",
     "    \n",
     "    static = 0\n",
     "    if cpuUsageRate > 0:\n",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,16 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {
     "id": "DYaYmjB5TSYp"
    },
    "outputs": [],
    "source": [
     "# Schedule all tasks in a way that minimizes the power consumption\n",
-    "def GreedyPower(input_data, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
+    "def GreedyPower(input_data, nextQueue, threshhold, executionTime, cpuTotal, memTotal):\n",
     "    length = len(input_data)\n",
     "    nextQueue = []\n",
+    "    rejected =[]\n",
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    energyUsage = 0\n",
     "    totalPower = 0\n",
@@ -389,10 +390,11 @@
     "    totalTurnaroundTime = 0\n",
     "    \n",
     "    for index, row in input_data.iterrows():\n",
+    "        #print(row)\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
     "        task_id = row['TaskID']\n",
     "        found_VM = False\n",
-    "        lowestPower = float('inf')\n",
+    "        lowestPower = 234567898765\n",
     "        lowestPowerIndex = -1\n",
     "        VM_id = 0\n",
     "        \n",
@@ -402,14 +404,15 @@
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "                #print(\"energy\", energy, \" lowest \", lowestPower)\n",
     "                if energy < lowestPower:\n",
     "                    lowestPower = energy\n",
     "                    lowestPowerIndex = VM_id\n",
     "                    \n",
     "        #is schedulable thank the lord\n",
     "        if lowestPowerIndex != -1:\n",
-    "            cpu = VMs[lowestPowerIndex][0]\n",
-    "            mem = VMs[lowestPowerIndex][1]\n",
+    "            cpu = row['NrmlTaskCores']\n",
+    "            mem = row['NrmlTaskMem']\n",
     "            \n",
     "            VMs[lowestPowerIndex][0] = VMs[lowestPowerIndex][0] - cpu\n",
     "            VMs[lowestPowerIndex][1] = VMs[lowestPowerIndex][1] - mem\n",
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,9 +456,11 @@
     "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
+    "                print(1)\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                cost = getCost(row['Time'], energy) # time, power arguments go here: FILL IN \n",
     "                if cost < lowestCost:\n",
+    "                    print(2)\n",
     "                    lowestCost = cost\n",
     "                    lowestCostIndex = VM_id\n",
     "                    \n",
@@ -483,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,22 +548,187 @@
      "text": [
       "76\n",
       "90000\n",
+      "596\n",
+      "0\n",
       "90300\n",
+      "48759\n",
+      "0\n",
       "90600\n",
+      "76850\n",
+      "0\n",
       "90900\n",
+      "72525\n",
+      "0\n",
       "91200\n",
+      "70932\n",
+      "0\n",
       "91500\n",
+      "73567\n",
+      "0\n",
       "91800\n",
+      "73433\n",
+      "0\n",
       "92100\n",
+      "72660\n",
+      "0\n",
       "92400\n",
+      "74503\n",
+      "145\n",
       "92700\n",
+      "72426\n",
+      "0\n",
       "93000\n",
+      "73826\n",
+      "0\n",
       "93300\n",
+      "74475\n",
+      "0\n",
       "93600\n",
+      "75295\n",
+      "0\n",
       "93900\n",
+      "75543\n",
+      "1\n",
       "94200\n",
+      "69300\n",
+      "0\n",
       "94500\n",
-      "94800\n"
+      "70197\n",
+      "0\n",
+      "94800\n",
+      "73575\n",
+      "0\n",
+      "95100\n",
+      "72675\n",
+      "0\n",
+      "95400\n",
+      "73787\n",
+      "0\n",
+      "95700\n",
+      "74433\n",
+      "0\n",
+      "96000\n",
+      "73512\n",
+      "0\n",
+      "96300\n",
+      "71394\n",
+      "0\n",
+      "96600\n",
+      "70162\n",
+      "0\n",
+      "96900\n",
+      "69935\n",
+      "0\n",
+      "97200\n",
+      "69627\n",
+      "0\n",
+      "97500\n",
+      "65843\n",
+      "0\n",
+      "97800\n",
+      "67284\n",
+      "0\n",
+      "98100\n",
+      "72416\n",
+      "0\n",
+      "98400\n",
+      "70015\n",
+      "0\n",
+      "98700\n",
+      "71627\n",
+      "0\n",
+      "99000\n",
+      "77332\n",
+      "0\n",
+      "99300\n",
+      "72144\n",
+      "0\n",
+      "99600\n",
+      "70064\n",
+      "0\n",
+      "99900\n",
+      "72532\n",
+      "0\n",
+      "100200\n",
+      "72338\n",
+      "0\n",
+      "100500\n",
+      "71789\n",
+      "0\n",
+      "100800\n",
+      "71844\n",
+      "0\n",
+      "101100\n",
+      "71833\n",
+      "0\n",
+      "101400\n",
+      "71721\n",
+      "0\n",
+      "101700\n",
+      "74389\n",
+      "275\n",
+      "102000\n",
+      "71496\n",
+      "2\n",
+      "102300\n",
+      "72208\n",
+      "0\n",
+      "102600\n",
+      "76357\n",
+      "76\n",
+      "102900\n",
+      "70149\n",
+      "0\n",
+      "103200\n",
+      "66853\n",
+      "0\n",
+      "103500\n",
+      "71279\n",
+      "0\n",
+      "103800\n",
+      "71372\n",
+      "0\n",
+      "104100\n",
+      "72883\n",
+      "0\n",
+      "104400\n",
+      "72431\n",
+      "0\n",
+      "104700\n",
+      "73179\n",
+      "0\n",
+      "105000\n",
+      "73440\n",
+      "0\n",
+      "105300\n",
+      "73308\n",
+      "0\n",
+      "105600\n",
+      "69745\n",
+      "0\n",
+      "105900\n",
+      "68469\n",
+      "0\n",
+      "106200\n",
+      "68329\n",
+      "0\n",
+      "106500\n",
+      "69076\n",
+      "0\n",
+      "106800\n",
+      "66184\n",
+      "0\n",
+      "107100\n",
+      "69092\n",
+      "0\n",
+      "107400\n",
+      "66227\n",
+      "0\n",
+      "107700\n",
+      "68862\n",
+      "0\n",
+      "108000\n",
+      "71140\n"
      ]
     }
    ],
@@ -575,17 +745,20 @@
     "totalTurnaroundTime = 0\n",
     "\n",
     "for i in setty:\n",
+    "    \n",
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
+    "    print(len(taskQueue))\n",
     "    returnObj = GreedyPower(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
+    "    print(len(returnObj[0]))\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower += returnObj[2]\n",
     "    totalCost += returnObj[3]\n",
-    "    totalCost += returnObj[4]\n",
+    "    totalTurnaroundTime += returnObj[4]\n",
     "    \n",
-    "print(\"rejected tasks\", rejected)\n",
+    "#print(\"rejected tasks\", rejected)\n",
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_1_i\", rejected)\n",
     "np.save(\"VMs_1_i\", VMs)\n",
