--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -442,6 +442,7 @@
     "    nextQueue = []\n",
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    cost = 0\n",
+    "    rejected =[]\n",
     "    \n",
     "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
@@ -456,18 +457,16 @@
     "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
-    "                print(1)\n",
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                cost = getCost(row['Time'], energy) # time, power arguments go here: FILL IN \n",
     "                if cost < lowestCost:\n",
-    "                    print(2)\n",
     "                    lowestCost = cost\n",
     "                    lowestCostIndex = VM_id\n",
     "                    \n",
     "        #is schedulable thank the lord\n",
     "        if lowestCostIndex != -1:\n",
-    "            cpu = VMs[lowestCostIndex][0]\n",
-    "            mem = VMs[lowestCostIndex][1]\n",
+    "            cpu = row['NrmlTaskCores']\n",
+    "            mem = row['NrmlTaskMem']\n",
     "            \n",
     "            VMs[lowestCostIndex][0] = VMs[lowestCostIndex][0] - cpu\n",
     "            VMs[lowestCostIndex][1] = VMs[lowestCostIndex][1] - mem\n",
@@ -498,7 +497,7 @@
     "    nextQueue = []\n",
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    energyUsage = 0\n",
-    "    \n",
+    "    rejected=[]\n",
     "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
     "        task_id = row['TaskID']\n",
@@ -511,13 +510,13 @@
     "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
-    "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "                #energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                index = VM_id\n",
     "                    \n",
     "        #is schedulable thank the lord\n",
     "        if index != -1:\n",
-    "            cpu = VMs[index][0]\n",
-    "            mem = VMs[index][1]\n",
+    "            cpu = row['NrmlTaskCores']\n",
+    "            mem = row['NrmlTaskMem']\n",
     "            \n",
     "            VMs[index][0] = VMs[index][0] - cpu\n",
     "            VMs[index][1] = VMs[index][1] - mem\n",
@@ -728,7 +727,43 @@
       "68862\n",
       "0\n",
       "108000\n",
-      "71140\n"
+      "71140\n",
+      "0\n",
+      "108300\n",
+      "68579\n",
+      "0\n",
+      "108600\n",
+      "70502\n",
+      "0\n",
+      "108900\n",
+      "70084\n",
+      "0\n",
+      "109200\n",
+      "70871\n",
+      "0\n",
+      "109500\n",
+      "72573\n",
+      "0\n",
+      "109800\n",
+      "70833\n",
+      "0\n",
+      "110100\n",
+      "69501\n",
+      "0\n",
+      "110400\n",
+      "71816\n",
+      "0\n",
+      "110700\n",
+      "70949\n",
+      "0\n",
+      "111000\n",
+      "68567\n",
+      "0\n",
+      "111300\n",
+      "71186\n",
+      "0\n",
+      "111600\n",
+      "71952\n"
      ]
     }
    ],
