--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,6 +443,9 @@
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    cost = 0\n",
     "    rejected =[]\n",
+    "    totalPower = 0\n",
+    "    totalCost = 0\n",
+    "    totalTurnaroundTime = 0\n",
     "    \n",
     "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
@@ -460,6 +463,7 @@
     "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                cost = getCost(row['Time'], energy) # time, power arguments go here: FILL IN \n",
     "                if cost < lowestCost:\n",
+    "                    #print(\"ew\")\n",
     "                    lowestCost = cost\n",
     "                    lowestCostIndex = VM_id\n",
     "                    \n",
@@ -472,7 +476,7 @@
     "            VMs[lowestCostIndex][1] = VMs[lowestCostIndex][1] - mem\n",
     "            \n",
     "            # Because we scheduled the task, update power, cost, and time:\n",
-    "            totalPower += getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshold)\n",
+    "            totalPower += getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "            totalCost += lowestCost\n",
     "            totalTurnaroundTime += row[executionTime]\n",
     "        else:\n",
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,6 +502,10 @@
     "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
     "    energyUsage = 0\n",
     "    rejected=[]\n",
+    "    totalPower = 0\n",
+    "    totalCost = 0\n",
+    "    totalTurnaroundTime = 0\n",
+    "    \n",
     "    for index, row in input_data.iterrows():\n",
     "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
     "        task_id = row['TaskID']\n",
@@ -522,7 +530,7 @@
     "            VMs[index][1] = VMs[index][1] - mem\n",
     "            \n",
     "            # Because we scheduled the task, update power, cost, and time:\n",
-    "            power = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshold)\n",
+    "            power = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "            totalPower += power\n",
     "            totalCost += getCost(row['Time'], power)\n",
     "            totalTurnaroundTime += row[executionTime]\n",
@@ -538,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +771,20 @@
       "71186\n",
       "0\n",
       "111600\n",
-      "71952\n"
+      "71952\n",
+      "0\n",
+      "111900\n",
+      "70175\n",
+      "0\n",
+      "112200\n",
+      "70689\n",
+      "0\n",
+      "112500\n",
+      "28420\n",
+      "0\n",
+      "Total Power:  175878244.20945978\n",
+      "Total Cost:  129060867.90725648\n",
+      "Total Turnaround Time:  2117604000.0\n"
      ]
     }
    ],
@@ -804,9 +825,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(rejected))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76\n",
+      "90000\n",
+      "0\n",
+      "90300\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-120-d927d1df5119>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mreturnObj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGreedyCost\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtaskQueue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnextQueue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'executionTime1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[0mrejected\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mreturnObj\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreturnObj\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-116-d3cab3b9eb62>\u001b[0m in \u001b[0;36mGreedyCost\u001b[1;34m(input_data, nextQueue, threshhold, executionTime, cpuTotal, memTotal)\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mVMs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mVM_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mcpu\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mVMs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mVM_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mmem\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m                 \u001b[0menergy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetEnergyConsumption\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mVMs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mVM_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcpuTotal\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthreshhold\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m                 \u001b[0mcost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetCost\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Time'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menergy\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# time, power arguments go here: FILL IN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mcost\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mlowestCost\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m                     \u001b[1;31m#print(\"ew\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-93-a5a7985e85ac>\u001b[0m in \u001b[0;36mgetCost\u001b[1;34m(time, power)\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[0mcost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcostChart\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32melif\u001b[0m \u001b[0mtime\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mmapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mcost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcostChart\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mcost\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mpower\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Run greedy cost for CPU = 7, Mem = 11\n",
     "VMs = [[7, 11] for i in range(100)]\n",
@@ -823,8 +885,11 @@
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
+    "    \n",
+    "    \n",
     "    returnObj = GreedyCost(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
+    "    print(len(returnObj[0]))\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower += returnObj[2]\n",
     "    totalCost += returnObj[3]\n",
@@ -843,7 +908,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76\n",
+      "90000\n",
+      "596\n",
+      "0\n",
+      "90300\n",
+      "48759\n"
+     ]
+    }
+   ],
    "source": [
     "# Run greedy turnaround time for CPU = 7, Mem = 11\n",
     "VMs = [[7, 11] for i in range(100)]\n",
@@ -860,8 +938,10 @@
     "    taskQueue = df.loc[df['Time'] == i]\n",
     "    taskQueue = taskQueue.append(nextQueue)\n",
     "    print(i)\n",
+    "    print(len(taskQueue))\n",
     "    returnObj = GreedyTurnaroundTime(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
     "    rejected += returnObj[0]\n",
+    "    print(len(returnObj[0]))\n",
     "    nextQueue = returnObj[1]\n",
     "    totalPower += returnObj[2]\n",
     "    totalCost += returnObj[3]\n",
