--- a/FP1.ipynb
+++ b/FP1.ipynb
@@ -462,7 +462,7 @@
     "            VM_id = j\n",
     "            #check whether this is even schedulable\n",
     "            if VMs[VM_id][0] >= cpu and VMs[VM_id][1] >= mem:\n",
-    "                energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
+    "                #energy = getEnergyConsumption(VMs[VM_id][0], cpuTotal, threshhold)\n",
     "                cost = getCost(row['Time'], energy) # time, power arguments go here: FILL IN \n",
     "                if cost < lowestCost:\n",
     "                    #print(\"ew\")\n",
@@ -812,8 +812,8 @@
     "    print(len(returnObj[0]))\n",
     "    rejected += returnObj[0]\n",
     "    nextQueue = returnObj[1]\n",
-    "    totalPower += returnObj[2]\n",
-    "    totalCost += returnObj[3]\n",
+    "    totalPower = returnObj[2]\n",
+    "    totalCost = returnObj[3]\n",
     "    totalTurnaroundTime += returnObj[4]\n",
     "    \n",
     "#print(\"rejected tasks\", rejected)\n",
