--- a/FP2.ipynb
+++ b/FP2.ipynb
@@ -429,6 +429,8 @@
     "        # If the task is rejected\n",
     "        else:\n",
     "            rejected.append(row['TaskID'])\n",
+    "            # Hard rejection of task by reducing the rest of the time for the subtasks to 0\n",
+    "            row[executionTime] = 0\n",
     "                \n",
     "        # Adjust remaining execution time for the overall task and append rest to nextQueue\n",
     "        if row[executionTime] > 300:\n",
@@ -487,6 +489,8 @@
     "            totalTurnaroundTime += row[executionTime]\n",
     "        else:\n",
     "            rejected.append(row['TaskID'])\n",
+    "            # Hard rejection of task by reducing the rest of the time for the subtasks to 0\n",
+    "            row[executionTime] = 0\n",
     "                \n",
     "        if row[executionTime] > 300:\n",
     "            row[executionTime] -= 300\n",
@@ -542,6 +546,8 @@
     "            totalTurnaroundTime += row[executionTime]\n",
     "        else:\n",
     "            rejected.append(row['TaskID'])\n",
+    "            # Hard rejection of task by reducing the rest of the time for the subtasks to 0\n",
+    "            row[executionTime] = 0\n",
     "                \n",
     "        if row[executionTime] > 300:\n",
     "            row[executionTime] -= 300\n",
