--- a/FP2.ipynb
+++ b/FP2.ipynb
@@ -558,6 +558,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RR(input_data, nextQueue, threshhold, executionTime,cpuTotal, memTotal):\n",
+    "    rejected = []\n",
+    "    \n",
+    "    length = len(input_data)\n",
+    "    nextQueue = []\n",
+    "    VMs = [[cpuTotal, memTotal] for i in range(100)]\n",
+    "    energyUsage = 0\n",
+    "    totalPower = 0\n",
+    "    totalCost = 0\n",
+    "    totalTurnaroundTime = 0\n",
+    "    \n",
+    "    # Iterate through all of the tasks\n",
+    "    \n",
+    "    for index, row in input_data.iterrows():\n",
+    "        cpu, mem = row['NrmlTaskCores'], row['NrmlTaskMem']\n",
+    "        task_id = row['TaskID']\n",
+    "        # Beginning id for filling the VMs\n",
+    "        VM_id = 0\n",
+    "        # get the VM id we need\n",
+    "        # E.g., VM_id+1, +2,....\n",
+    "        # search next available VM. \n",
+    "        # If found, update resource availability, otherwise, put task_id[i] in rejected\n",
+    "        # Iterate through all of the VMs\n",
+    "        for j in range(100):\n",
+    "            # find the available cpu and mem units based on VM_id\n",
+    "            cpu_vm = VMs[VM_id][0]\n",
+    "            mem_vm = VMs[VM_id][1] \n",
+    "            # If a given VM has space, then remove the CPU and MEM units for the given task and go to the next task\n",
+    "            if cpu_vm >= cpu and mem_vm >= mem:\n",
+    "                # We can put task_id[i] into VM[VM_id]\n",
+    "                # update VM resource availability. \n",
+    "                VMs[VM_id][0] = cpu_vm - cpu\n",
+    "                VMs[VM_id][1] = mem_vm - mem\n",
+    "                # Increase the VM_id so that the next VM can be checked\n",
+    "                VM_id = VM_id + 1\n",
+    "                # Reset VM_id back to 0 if it hits 100\n",
+    "                if VM_id == 100:\n",
+    "                    VM_id = 0\n",
+    "                # Because we scheduled the task, update power, cost, and time\n",
+    "                power = getEnergyConsumption(VMs[index][0], cpuTotal, threshhold)\n",
+    "                totalPower += power\n",
+    "                totalCost += getCost(row['Time'], power)\n",
+    "                totalTurnaroundTime += row[executionTime]\n",
+    "                # Skip to the next task since this one has been allocated\n",
+    "                break\n",
+    "            # If on the last VM and the task still hasn't been alloted to a VM, then put the task id in rejected\n",
+    "            elif j == 99:\n",
+    "                rejected.append(row['TaskID'])\n",
+    "                # Hard rejection of task by reducing the rest of the time for the subtasks to 0\n",
+    "                row[executionTime] = 0\n",
+    "            # Increase the VM_id so that the next VM can be checked\n",
+    "            VM_id = VM_id + 1\n",
+    "            # Reset VM_id back to 0 if it hits 100\n",
+    "            if VM_id == 100:\n",
+    "                VM_id = 0\n",
+    "                \n",
+    "        if row[executionTime] > 300:\n",
+    "            row[executionTime] -= 300\n",
+    "            nextQueue.append(row)\n",
+    "\n",
+    "\n",
+    "    # If none of the tasks were rejected, print 0\n",
+    "    if len(rejected) == 0:\n",
+    "        print('0')\n",
+    "        \n",
+    "    return rejected, nextQueue, totalPower, totalCost, totalTurnaroundTime"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "scrolled": true
@@ -966,6 +1040,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run RR for CPU = 7, Mem = 11\n",
+    "VMs = [[7, 11] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "print(len(setty))\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "    print(i)\n",
+    "    returnObj = RR(taskQueue, nextQueue, 0.5, 'executionTime1', 7, 11)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "    totalPower = returnObj[2]\n",
+    "    print(totalPower)\n",
+    "    totalCost = returnObj[3]\n",
+    "    totalTurnaroundTime = returnObj[4]\n",
+    "\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_1_iv\", rejected)\n",
+    "np.save(\"VMs_1_iv\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1277,6 +1388,41 @@
     "if len(rejected) > 0:\n",
     "    np.save(\"taskReject_2_iii\", rejected)\n",
     "np.save(\"VMs_2_iii\", VMs)\n",
+    "print(\"Total Power: \", totalPower)\n",
+    "print(\"Total Cost: \", totalCost)\n",
+    "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run greedy cost for CPU = 25 and Mem = 40\n",
+    "VMs = [[25, 40] for i in range(100)]\n",
+    "setty = set(df['Time'].values)\n",
+    "setty = sorted(setty)\n",
+    "rejected = []\n",
+    "nextQueue = []\n",
+    "totalPower = 0\n",
+    "totalCost = 0\n",
+    "totalTurnaroundTime = 0\n",
+    "\n",
+    "for i in setty:\n",
+    "    taskQueue = df.loc[df['Time'] == i]\n",
+    "    taskQueue = taskQueue.append(nextQueue)\n",
+    "   \n",
+    "    returnObj = RR(taskQueue, nextQueue, 0.9, 'executionTime2', 25, 40)\n",
+    "    rejected += returnObj[0]\n",
+    "    nextQueue = returnObj[1]\n",
+    "    totalPower = returnObj[2]\n",
+    "    totalCost = returnObj[3]\n",
+    "    totalTurnaroundTime = returnObj[4]\n",
+    "\n",
+    "if len(rejected) > 0:\n",
+    "    np.save(\"taskReject_2_iv\", rejected)\n",
+    "np.save(\"VMs_2_iv\", VMs)\n",
     "print(\"Total Power: \", totalPower)\n",
     "print(\"Total Cost: \", totalCost)\n",
     "print(\"Total Turnaround Time: \", totalTurnaroundTime)"
